tests/compile-fail/panic/bad_unwind.stderr
thread 'main' panicked at 'explicit panic', $DIR/bad_unwind.rs:7:5
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Undefined Behavior: unwinding past a stack frame that does not allow unwinding
  --> $DIR/bad_unwind.rs:13:33
   |
LL |     std::panic::catch_unwind(|| unwind()).unwrap_err();
   |                                 ^^^^^^^^ unwinding past a stack frame that does not allow unwinding
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside closure at $DIR/bad_unwind.rs:13:33
   = note: inside `std::panicking::r#try::do_call::<[closure@$DIR/bad_unwind.rs:13:30: 13:41], ()>` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/std/src/panicking.rs:492:40
   = note: inside `std::panicking::r#try::<(), [closure@$DIR/bad_unwind.rs:13:30: 13:41]>` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/std/src/panicking.rs:456:19
   = note: inside `std::panic::catch_unwind::<[closure@$DIR/bad_unwind.rs:13:30: 13:41], ()>` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/std/src/panic.rs:137:14
note: inside `main` at $DIR/bad_unwind.rs:13:5
  --> $DIR/bad_unwind.rs:13:5
   |
LL |     std::panic::catch_unwind(|| unwind()).unwrap_err();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

